--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,5 +5,4 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - directory: "/" # Location of package manifests
