--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,3 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "local>bpalko/renovate-config"
-    ],
-    "schedule": [
-        "after 3pm every weekday"
-    ]
-  }
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+}
