--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "app.js",
     "dependencies": {
         "express": "4.17.1",
-        "body-parser": "1.18.2"
+        "body-parser": "1.18.2",
+        "cors": "2.7.0",
     },
     "scripts": {
         "start": "node app.js"
