--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "express": "4.17.1",
         "body-parser": "1.18.2",
-        "cors": "2.7.0",
+        "cors": "2.7.0"
     },
     "scripts": {
         "start": "node app.js"
