--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "app.js",
     "dependencies": {
         "express": "4.17.1",
-        "body-parser": "1.18.2",
-        "cors": "2.7.0"
+        "body-parser": "1.18.3"
+        "body-parser": "1.18.2"
     },
     "scripts": {
         "start": "node app.js"
